package towers;

public class adc extends rols {
	@Override
	public String start() {
		return " duo line and attack";
	}

	@Override
	public String team_figth() {
		return " eliminating tanks";
	}

	@Override
	public String name() {
		
		return "ADC";
	}
	
	@Override
	public String normal_game() {
		return " farm in lane and rotate occasionally";
	}
	
}
