package towers;

public class jungle extends rols {
	
	@Override
	public String start() {
		return " jungle and gank mid";
	}

	@Override
	public String team_figth() {
		return " eliminating carries";
	}

	@Override
	public String name() {
		
		return " JG";
	}
	
	@Override
	public String normal_game() {
		return " try feed and ganks lines";
	}
	
}
