package towers;

public class mage extends rols{
	@Override
	public String start() {
		return " mid line and farm";
	}

	@Override
	public String team_figth() {
		return " eliminating enemies";
	}

	@Override
	public String name() {
		
		return "MAGE";
	}
	@Override
	public String normal_game() {
		return "farm in lane and constant fights";
	}
	
}
