package towers;

public class solo extends rols {
	@Override
	public String start() {
		return " solo line";
	}

	@Override
	public String team_figth() {
		return " eliminating the jungle and protecting the carries";
	}

	@Override
	public String name() {
		
		return " SOLO";
	}
	@Override
	public String normal_game() {
		return " one vs one";
	}
	
}
