package towers;

public class support extends rols{

	@Override
	public String start() {
		return " duo line and protect the adc";
	}

	@Override
	public String team_figth() {
		return " protect the adc and mid";
	}

	@Override
	public String name() {
		
		return "SUPP";
	}

	@Override
	public String normal_game() {
		return " rotate and prevent the team from being killed";
	}

} 
